--- a/styles/main.css
+++ b/styles/main.css
@@ -37,15 +37,34 @@ body {
 
 .page-footer {
     padding-bottom: 120;
-    margin: 40px 0 20px;
+    /* margin: 40px 0 20px; */
     border-bottom: 1px solid #d7d7d7;
+}
+
+.page-footer .left {
+    float: left;
+    margin: 20px;
+    margin-left: 25px;
+    padding-left: 7.5vw;
+}
+
+.page-footer .right {
+    float: right;
+    margin: 20px;
+    margin-right: 25px;
+    padding-right: 7.5vw;
+    margin-top: 5px;
 }
 
 .page-footer p {
     font-family: 'Cutive Mono', monospace;
-    float: right;
-    padding-right: 7.5vw;
     font-weight: 400;
+}
+
+a:link, a:hover, a:visited, a:active {
+    color: black;
+    font-style: normal;
+    text-decoration-line: none;
 }
 
 @media only screen and (max-width: 600px) {
